plugins {
    id 'java'
}

group = "org.asf"
version = "1.0.0.A16"

apply plugin: 'eclipse'
apply plugin: 'maven-publish'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

java {
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
	testImplementation group: 'javax.activation', name: 'activation', version: '1.1.1'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
}

tasks.named('test') {
    useJUnitPlatform()
}


publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}
